Bug 1349746 - Ensure we close media cache's temporary file if the cache shuts down while we're waiting for the FD to arrive. r=jwwang

MozReview-Commit-ID: HNXt3pYb1Iv

--HG--
extra : rebase_source : 5dccbbb4bf37bf31da145d70abab7373871a1413