dom/media/FileBlockCache.h
@@ -163,12 +163,6 @@ private:
   // has been dispatched to preform the IO.
   // mDataMonitor must be owned while calling this.
   void EnsureWriteScheduled();
-  // Promise that tracks the request for an anonymous temporary file for the
-  // cache to store data into. The file descriptor must be requested from the
-  // parent process when the cache is initialized. While this promise is
-  // outstanding, the FileBlockCache buffers blocks in memory, and reads
-  // against the cache are serviced from the in-memory buffers.
-  RefPtr<GenericPromise::Private> mInitPromise;
 
   // Array of block changes to made. If mBlockChanges[offset/BLOCK_SIZE] == nullptr,
   // then the block has no pending changes to be written, but if
@@ -180,15 +174,17 @@ private:
   // created upon open, and shutdown (asynchronously) upon close (on the
   // main thread).
   nsCOMPtr<nsIThread> mThread;
-  // Wrapper for mThread.
-  RefPtr<AbstractThread> mAbstractThread;
   // Queue of pending block indexes that need to be written or moved.
   std::deque<int32_t> mChangeIndexList;
   // True if we've dispatched an event to commit all pending block changes
   // to file on mThread.
   bool mIsWriteScheduled;
-  // True if the writer is ready to write data to file.
+  // True if the writer is ready to enqueue writes.
   bool mIsOpen;
+  // True if we've got a temporary file descriptor. Note: we don't use mFD
+  // directly as that's synchronized via mFileMonitor and we need to make
+  // decisions about whether we can write while holding mDataMonitor.
+  bool mInitialized = false;
 };
 
 } // End namespace mozilla.
